stDemoOne/force-app/main/default/objects/IndividualApplication/fields/Boat_Length__c.field-meta.xml
<CustomField>
    <fullName>Boat_Length__c</fullName>
    <label>Boat Length</label>
    <length>255</length>
    <type>Text</type>
</CustomField>