stDemoOne/force-app/main/default/objects/IndividualApplication/fields/Budget_vs_Requested_Amount__c.field-meta.xml
<CustomField>
    <fullName>Budget_vs_Requested_Amount__c</fullName>
    <formula>Total_Budget__c - RequestedAmount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget vs Requested Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>