stDemoOne/force-app/main/default/objects/IndividualApplication/fields/Community_Contact_Match__c.field-meta.xml
<CustomField>
    <fullName>Community_Contact_Match__c</fullName>
    <formula>CreatedBy.Id =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Community Contact Match</label>
    <type>Checkbox</type>
</CustomField>