stDemoOne/force-app/main/default/objects/IndividualApplication/fields/Golden_Record__c.field-meta.xml
<CustomField>
    <fullName>Golden_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Golden Record</label>
    <type>Checkbox</type>
</CustomField>