stDemoOne/force-app/main/default/objects/IndividualApplication/fields/IDOApplying_Contact_Info_Verified__c.field-meta.xml
<CustomField>
    <fullName>IDOApplying_Contact_Info_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applying Contact Info Verified</label>
    <type>Checkbox</type>
</CustomField>