stDemoOne/force-app/main/default/objects/IndividualApplication/fields/IDOApplying_Organization_Info_Verified__c.field-meta.xml
<CustomField>
    <fullName>IDOApplying_Organization_Info_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applying Organization Info Verified</label>
    <type>Checkbox</type>
</CustomField>