stDemoOne/force-app/main/default/objects/IndividualApplication/fields/IDOFunding_Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>IDOFunding_Organization_Name__c</fullName>
    <formula>FundingOpportunity.Funding_Organization__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funding Organization Name</label>
    <type>Text</type>
</CustomField>