stDemoOne/force-app/main/default/objects/IndividualApplication/fields/IDOProject_Description__c.field-meta.xml
<CustomField>
    <fullName>IDOProject_Description__c</fullName>
    <label>Project Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>