stDemoOne/force-app/main/default/objects/IndividualApplication/fields/IDOProject_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>IDOProject_Start_Date__c</fullName>
    <label>Project Start Date</label>
    <type>Date</type>
</CustomField>