stDemoOne/force-app/main/default/objects/IndividualApplication/fields/IDOProject_Title__c.field-meta.xml
<CustomField>
    <fullName>IDOProject_Title__c</fullName>
    <label>Project Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>