stDemoOne/force-app/main/default/objects/IndividualApplication/fields/IDOProject_Type__c.field-meta.xml
<CustomField>
    <fullName>IDOProject_Type__c</fullName>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Construction Project</fullName>
            </value>
            <value>
                <fullName>Non-Construction Project</fullName>
            </value>
            <value>
                <fullName>Transit Oriented Development</fullName>
            </value>
            <value>
                <fullName>Integrated Community Project</fullName>
            </value>
            <value>
                <fullName>Rural Innovation Project</fullName>
            </value>
            <value>
                <fullName>Affordable Housing Development</fullName>
            </value>
            <value>
                <fullName>Housing Related Infrastructure</fullName>
            </value>
            <value>
                <fullName>Sustainable Transportation Infrastructure</fullName>
            </value>
            <value>
                <fullName>Transportation-Related Amenities</fullName>
            </value>
            <value>
                <fullName>Program Costs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>