stDemoOne/force-app/main/default/objects/IndividualApplication/fields/Name_of_Boat__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Boat__c</fullName>
    <label>Name of Boat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>