stDemoOne/force-app/main/default/objects/IndividualApplication/fields/Previous_Agency__c.field-meta.xml
<CustomField>
    <fullName>Previous_Agency__c</fullName>
    <label>Previous Agency</label>
    <length>200</length>
    <type>Text</type>
</CustomField>