stDemoOne/force-app/main/default/objects/IndividualApplication/fields/Previous_End__c.field-meta.xml
<CustomField>
    <fullName>Previous_End__c</fullName>
    <label>Previous End</label>
    <type>Date</type>
</CustomField>