stDemoOne/force-app/main/default/objects/IndividualApplication/fields/Previous_Foster_Parent__c.field-meta.xml
<CustomField>
    <fullName>Previous_Foster_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Previous Foster Parent</label>
    <type>Checkbox</type>
</CustomField>