stDemoOne/force-app/main/default/objects/IndividualApplication/fields/Previous_Foster_Parent_State__c.field-meta.xml
<CustomField>
    <fullName>Previous_Foster_Parent_State__c</fullName>
    <label>Previous Foster Parent State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>