stDemoOne/force-app/main/default/objects/IndividualApplication/fields/Previous_Start__c.field-meta.xml
<CustomField>
    <fullName>Previous_Start__c</fullName>
    <label>Previous Start</label>
    <type>Date</type>
</CustomField>