stDemoOne/force-app/main/default/objects/IndividualApplication/fields/Questions_Comments__c.field-meta.xml
<CustomField>
    <fullName>Questions_Comments__c</fullName>
    <label>Questions/Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>