stDemoOne/force-app/main/default/objects/IndividualApplication/fields/Total_Budget__c.field-meta.xml
<CustomField>
    <fullName>Total_Budget__c</fullName>
    <formula>Budget.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>