stDemoOne/force-app/main/default/objects/IndividualApplication/fields/Type_of_Care__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Care__c</fullName>
    <label>Type of Care</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Relative Care</fullName>
            </value>
            <value>
                <fullName>Adoptive Care</fullName>
            </value>
            <value>
                <fullName>Adoption</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>