stDemoOne/force-app/main/default/objects/IndividualApplication/fields/Type_of_Fuel_Used__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Fuel_Used__c</fullName>
    <label>Type of Fuel Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>