stDemoOne/force-app/main/default/objects/IndividualApplication/fields/Type_of_License__c.field-meta.xml
<CustomField>
    <fullName>Type_of_License__c</fullName>
    <label>Type of License</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Therapuetic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>