stDemoOne/force-app/main/default/objects/IndividualApplication/fields/Why_Interested__c.field-meta.xml
<CustomField>
    <fullName>Why_Interested__c</fullName>
    <label>Interest Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>