stDemoOne/force-app/main/default/objects/IndividualApplication/recordTypes/Grantmaking.recordType-meta.xml
<RecordType>
    <fullName>Grantmaking</fullName>
    <active>true</active>
    <label>Grantmaking</label>
</RecordType>