stDemoOne/force-app/main/default/objects/IndividualApplication/recordTypes/Individual_Application.recordType-meta.xml
<RecordType>
    <fullName>Individual_Application</fullName>
    <active>true</active>
    <description>For LPI related IAs</description>
    <label>Individual Application</label>
</RecordType>