stDemoOne/force-app/main/default/objects/IndividualApplication/recordTypes/PublicSector__Training_Certificate.recordType-meta.xml
<RecordType>
    <fullName>PublicSector__Training_Certificate</fullName>
    <active>true</active>
    <label>Training Certificate</label>
</RecordType>