stDemoOne/force-app/main/default/objects/IndividualApplication/recordTypes/Social_Insurance.recordType-meta.xml
<RecordType>
    <fullName>Social_Insurance</fullName>
    <active>true</active>
    <label>Social Insurance</label>
</RecordType>