stDemoOne/force-app/main/default/objects/IndividualApplication/listViews/All_IndividualApplications.listView-meta.xml
<ListView>
    <fullName>All_IndividualApplications</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>LicenseType</columns>
    <columns>AppliedDate</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FundingOpportunity</field>
        <operation>equals</operation>
        <value>2024-2025 Relief &amp; Reinvestment Grant</value>
    </filters>
    <label>All Individual Applications</label>
</ListView>