stDemoOne/force-app/main/default/objects/IndividualApplication/listViews/Benefits_Individual_Applications.listView-meta.xml
<ListView>
    <fullName>Benefits_Individual_Applications</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>AppliedDate</columns>
    <columns>LicenseType</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordType</field>
        <operation>equals</operation>
        <value>IndividualApplication.Benefits</value>
    </filters>
    <label>Benefits Individual Applications</label>
</ListView>