stDemoOne/force-app/main/default/objects/IndividualApplication/listViews/GPS_Application_Reviewers_IndividualApplication.listView-meta.xml
<ListView>
    <fullName>GPS_Application_Reviewers_IndividualApplication</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>LicenseType</columns>
    <columns>AppliedDate</columns>
    <columns>Status</columns>
    <filterScope>Queue</filterScope>
    <label>Application Reviewers</label>
    <queue>GPS_Application_Reviewers</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>