stDemoOne/force-app/main/default/objects/IndividualApplication/listViews/gps_Emergency_Requests.listView-meta.xml
<ListView>
    <fullName>gps_Emergency_Requests</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>AppliedDate</columns>
    <columns>LicenseType</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordType</field>
        <operation>equals</operation>
        <value>IndividualApplication.PublicSector__Emergency_Request</value>
    </filters>
    <label>Emergency Requests</label>
</ListView>