stDemoOne/force-app/main/default/objects/IndividualApplication/listViews/Grant_Applications.listView-meta.xml
<ListView>
    <fullName>Grant_Applications</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>AppliedDate</columns>
    <columns>LicenseType</columns>
    <columns>Status</columns>
    <columns>InternalStatus</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordType</field>
        <operation>equals</operation>
        <value>IndividualApplication.Grantmaking</value>
    </filters>
    <label>Grant Applications</label>
</ListView>