stDemoOne/force-app/main/default/objects/IndividualApplication/listViews/Heating_Assistance.listView-meta.xml
<ListView>
    <fullName>Heating_Assistance</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>AppliedDate</columns>
    <columns>LicenseType</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LicenseType</field>
        <operation>equals</operation>
        <value>Heating Assistance</value>
    </filters>
    <label>Heating Assistance</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>