stDemoOne/force-app/main/default/objects/IndividualApplication/listViews/My_Individual_Applications.listView-meta.xml
<ListView>
    <fullName>My_Individual_Applications</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>AppliedDate</columns>
    <columns>LicenseType</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <label>My Individual Applications</label>
</ListView>